Fix some alignment stuff with flex-column mixin.

--- a/src/style/constants.scss
+++ b/src/style/constants.scss
@@ -20,3 +20,9 @@ $font-weight-normal: 300;
 $font-weight-bold: 500;
 
 $line-height: 1.5;
+
+@mixin flex-column {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
