--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -39,7 +39,3 @@ hr {
   border: 1px dashed #999;
   margin: 0.5em;
 }
-
-.center {
-  text-align: center;
-}
